@@ -7,7 +7,8 @@ Added / Fixed / changed for 2.0.8
 # This release focuses on fixing bugs and enhanced speed/size
   - adds manual sorting to news module
   - adds random sorting to links module
-  - enhances category management by removing global categories
+  - enhances category management by removing global categories and grouping categories by module type
+  - enhances comment management by adding a manage site comments command to exponent menu
 
 Added / Fixed / changed for 2.0.7
 -----------------------
